# zealot

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
fuzz/: Cargo.toml  README.md
fuzz/in/session_decrypt/: seed.txt
src/: account.rs  chain.rs  config.rs  crypto.rs  double_ratchet.rs  error.rs  identity_key.rs  lib.rs  one_time_pre_key.rs  onetime_pre_key.rs  pre_key.rs  proto.rs  ratchet.rs  ratchet_message.rs  session.rs  state.rs  x3dh.rs
src/account/: config.rs  mod.rs  session.rs
src/proto/: account.proto  mod.rs  zealot.proto
src/ratchet/: chain.rs  message.rs  mod.rs  state.rs
src/types/: mod.rs  x25519.rs
src/x3dh/: identity_key.rs  mod.rs  one_time_pre_key.rs  pre_key.rs
tests/: integration.rs
