[package]
name = "zealot"
version = "0.1.0"
edition = "2024"

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "digest"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
rand_core = { version = "0.9.2", features = ["os_rng"] }
hkdf = "0.12.4"
sha2 = "0.10.8"
zeroize = "1.8.1"
